# podcast-downloader

./: .env.example  .gitignore  000_CHRONOLOGICAL_ORDER.md  000_CHRONOLOGICAL_SORTING_DEMO.md  CHRONOLOGICAL_ORDER_FIX.md  EXAMPLE_OUTPUT.md  FILES.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  SUMMARY.md  USAGE_EXAMPLE.md  demo.py  demo_chronological_order.py  podcast_downloader.py  pyproject.toml  requirements.txt  setup.py  test_chronological_order.py  test_downloader.py  test_filename_generation.py
examples/: demo.py
src/podcast_downloader/: __init__.py  downloader.py
tests/: test_downloader.py
